fix the stars out of the box issue again

--- a/public/css/rating.css
+++ b/public/css/rating.css
@@ -57,8 +57,8 @@
 /* Adjustments for mobile devices */
 @media (max-width: 767px) {
   .card {
-    flex: 0 0 50%; /* Ensure each card takes the full width on small screens */
-    margin-right: 0; /* Remove margin for spacing between cards on small screens */
+    flex: 0 0 70%; /* Ensure each card takes the full width on small screens */
+    margin-right: 0px; /* Remove margin for spacing between cards on small screens */
   }
 
   .starability-result {
